K3S/tools/portainer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
  namespace: portainer
  labels:
    io.portainer.kubernetes.application.stack: portainer
    app.kubernetes.io/name: portainer
    app.kubernetes.io/instance: portainer
    app.kubernetes.io/version: "ce-latest-ee-2.19.5"
spec:
  replicas: 1
  strategy:
    type: "Recreate"
  selector:
    matchLabels:
      app.kubernetes.io/name: portainer
      app.kubernetes.io/instance: portainer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: portainer
        app.kubernetes.io/instance: portainer
    spec:
      nodeSelector:
        {}
      serviceAccountName: portainer-sa-clusteradmin
      volumes:
        - name: portainer-volume
          persistentVolumeClaim:
            claimName: portainer-pvc
      containers:
        - name: portainer
          image: "portainer/portainer-ce:2.19.5"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: portainer-volume
              mountPath: /data
          ports:
            - name: http
              containerPort: 9000
            - name: https
              containerPort: 9443
            - name: tcp-edge
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 9443
              scheme: HTTPS
          readinessProbe:
            httpGet:
              path: /
              port: 9443
              scheme: HTTPS
          resources:
            {}
