K3S/tools/portainer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer-svc
  namespace: portainer
  labels:
    io.portainer.kubernetes.application.stack: portainer
    app.kubernetes.io/name: portainer
    app.kubernetes.io/instance: portainer
    app.kubernetes.io/version: "ce-latest-ee-2.19.5"
spec:
  type: ClusterIP
  ports:
    - port: 9000
      name: http
    - port: 9443
      name: https
    - port: 30776
      name: edge
  selector:
    app.kubernetes.io/name: portainer
    app.kubernetes.io/instance: portainer
